2012-06-10  Ivan Maidanski  <ivmai@mail.ru>

	* compat/.gitignore,
	* compat/java.net/.gitignore,
	* doc/.gitignore,
	* doc/api/.gitignore,
	* doc/www.gnu.org/.gitignore,
	* doc/www.gnu.org/announce/.gitignore,
	* doc/www.gnu.org/cp-tools/.gitignore,
	* doc/www.gnu.org/docs/.gitignore,
	* doc/www.gnu.org/downloads/.gitignore,
	* doc/www.gnu.org/events/.gitignore,
	* doc/www.gnu.org/faq/.gitignore,
	* examples/.gitignore,
	* external/.gitignore,
	* external/jsr166/.gitignore,
	* external/relaxngDatatype/.gitignore,
	* external/sax/.gitignore,
	* external/w3c_dom/.gitignore,
	* gnu/classpath/.gitignore,
	* gnu/java/locale/.gitignore,
	* gnu/java/security/.gitignore,
	* gnu/test/.gitignore,
	* include/.gitignore,
	* java/util/.gitignore,
	* lib/.gitignore,
	* native/.gitignore,
	* native/fdlibm/.gitignore,
	* native/jawt/.gitignore,
	* native/jni/.gitignore,
	* native/jni/classpath/.gitignore,
	* native/jni/gconf-peer/.gitignore,
	* native/jni/gstreamer-peer/.gitignore,
	* native/jni/gtk-peer/.gitignore,
	* native/jni/java-io/.gitignore,
	* native/jni/java-lang/.gitignore,
	* native/jni/java-math/.gitignore,
	* native/jni/java-net/.gitignore,
	* native/jni/java-nio/.gitignore,
	* native/jni/java-util/.gitignore,
	* native/jni/midi-alsa/.gitignore,
	* native/jni/midi-dssi/.gitignore,
	* native/jni/native-lib/.gitignore,
	* native/jni/qt-peer/.gitignore,
	* native/jni/xmlj/.gitignore,
	* native/plugin/.gitignore,
	* native/testsuite/.gitignore,
	* native/vmi/.gitignore,
	* resource/.gitignore,
	* resource/META-INF/services/.gitignore,
	* scripts/.gitignore,
	* test/.gitignore,
	* test/gnu.java.lang.reflect/.gitignore,
	* test/java.io/.gitignore,
	* test/java.lang.reflect/.gitignore,
	* test/java.net/.gitignore,
	* test/java.util/.gitignore,
	* tools/.gitignore,
	* tools/gnu/classpath/tools/doclets/.gitignore,
	* tools/gnu/classpath/tools/doclets/debugdoclet/.gitignore,
	* tools/gnu/classpath/tools/doclets/htmldoclet/.gitignore,